--- a/180907.md
+++ b/180907.md
@@ -89,8 +89,29 @@ B;
 
 ## Results:
 
+initial water clean
+[1](/180907/1)
 
+water - water
+[2](/180907/2)
 
+buffer - buffer
+[3](/180907/3)
+
+host - buffer
+[4](/180907/4)
+
+buffer - guest
+[5](/180907/5)
+
+host - guest
+[6](/180907/6)
+
+water - water
+[7](/180907/7)
+
+water - water
+[8](/180907/7)
 
 
 
