--- a/180907.md
+++ b/180907.md
@@ -90,28 +90,28 @@ B;
 ## Results:
 
 initial water clean
-[1](/180907/1)
+[1](/180907/1.png)
 
 water - water
-[2](/180907/2)
+[2](/180907/2.png)
 
 buffer - buffer
-[3](/180907/3)
+[3](/180907/3.png)
 
 host - buffer
-[4](/180907/4)
+[4](/180907/4.png)
 
 buffer - guest
-[5](/180907/5)
+[5](/180907/5.png)
 
 host - guest
-[6](/180907/6)
+[6](/180907/6.png)
 
 water - water
-[7](/180907/7)
+[7](/180907/7.png)
 
 water - water
-[8](/180907/7)
+[8](/180907/8.png)
 
 
 
