--- a/180907.md
+++ b/180907.md
@@ -90,28 +90,28 @@ B;
 ## Results:
 
 initial water clean
-[1](/180907/1.png)
+![1](/180907/1.png)
 
 water - water
-[2](/180907/2.png)
+![2](/180907/2.png)
 
 buffer - buffer
-[3](/180907/3.png)
+![3](/180907/3.png)
 
 host - buffer
-[4](/180907/4.png)
+![4](/180907/4.png)
 
 buffer - guest
-[5](/180907/5.png)
+![5](/180907/5.png)
 
 host - guest
-[6](/180907/6.png)
+![6](/180907/6.png)
 
 water - water
-[7](/180907/7.png)
+![7](/180907/7.png)
 
 water - water
-[8](/180907/8.png)
+![8](/180907/8.png)
 
 
 
