--- a/180912.md
+++ b/180912.md
@@ -13,7 +13,12 @@ mw | 123.11 g/mol
 solubility | 15 g/L in water at 20 $\degree$C
 density | 1.4 g/mL 
 
-in buffer solution 0.01 M = 1.23 g/L
+in buffer solution:
+before we used, 10 mM = 0.01 M = 1.23 g/L = 1.23 mg/g
+now we use, 1 mM = 0.001 M = 0.123 g/L = 0.123 mg/g
+
+
+## $\beta$ - CD dosing head
 
 
 ## $\beta$ - CD solution
@@ -25,8 +30,9 @@ prop | val
 mw | 1134.987 g/mol
 solubility | sparingly soluble in water ?
 density | 
+purity | 98%
 
-in buffer solution 0.01 M = 11.34 g/L
+in buffer solution 0.001 M = 1.134 g/L
 
 ## Python script
 
@@ -59,7 +65,7 @@ cell_volume = 202.8
 # each experiment takes about 50 mins, cleaning takes 2.5
 nguests = 1
 
-host = Compound('host', molecular_weight=1134.987 * ureg.gram / ureg.mole, purity=0.7133)
+host = Compound('host', molecular_weight=1134.987 * ureg.gram / ureg.mole, purity=0.98)
 guest_molecular_weights = [123.11]
 
 # the guest compound Ka is very large.
@@ -91,10 +97,10 @@ source_plate = Labware(RackLabel='SourcePlate', RackType='5x3 Vial Holder')
 
 host_solution = SimpleSolution(
     compound=host,
-    compound_mass=33.490 *
+    compound_mass=11.54 *
     ureg.milligram,
     solvent=buffer,
-    solvent_mass=10.1151 *
+    solvent_mass=10.2002
     ureg.gram,
     location=PipettingLocation(
         source_plate.RackLabel,
@@ -103,10 +109,10 @@ host_solution = SimpleSolution(
 guest_solutions = list()
 
 # Dispensed by quantos
-guest_compound_masses = Quantity([0],
+guest_compound_masses = Quantity([1.38],
                                  ureg.milligram)
 # Dispensed by quantos
-guest_solvent_masses = Quantity([0],
+guest_solvent_masses = Quantity([11.4985],
                                 ureg.gram)
 
 
