--- a/180912.md
+++ b/180912.md
@@ -36,11 +36,13 @@ in buffer solution 0.001 M = 1.134 g/L
 
 ## Python script
 
-```python
+```
 #! /usr/bin/env python
 """
 Script for generation of input files for host to guest ITC titrations.
 """
+
+import numpy as np
 from itctools.itctools import ureg, Quantity
 from itctools.procedures import ITCProtocol, ITCExperimentSet, ITCExperiment, ITCHeuristicExperiment
 from itctools.materials import Solvent, Compound, SimpleSolution
@@ -49,7 +51,7 @@ from itctools.labware import Labware, PipettingLocation
 
 
 #######################################
-Below are the params needed to specify.
+# Below are the params needed to specify.
 #######################################
 
 
@@ -69,8 +71,8 @@ host = Compound('host', molecular_weight=1134.987 * ureg.gram / ureg.mole, purit
 guest_molecular_weights = [123.11]
 
 # the guest compound Ka is very large.
-guest_compound_Ka = Quantity([9999999],
-                             ureg.liter / ureg.mole)  # see dGtoKa.py 
+guest_compound_Ka = Quantity([np.exp(32)],
+                             ureg.liter / ureg.mole)  # see dGtoKa.py
 
 guests = [
     Compound(
@@ -100,7 +102,7 @@ host_solution = SimpleSolution(
     compound_mass=11.54 *
     ureg.milligram,
     solvent=buffer,
-    solvent_mass=10.2002
+    solvent_mass=10.2002 *
     ureg.gram,
     location=PipettingLocation(
         source_plate.RackLabel,
@@ -131,7 +133,7 @@ for guest_index in range(nguests):
 
 
 #######################################
-Above are the params needed to specify.
+# Above are the params needed to specify.
 #######################################
 
 # Define ITC protocol.
