--- a/180912.md
+++ b/180912.md
@@ -36,7 +36,7 @@ in buffer solution 0.001 M = 1.134 g/L
 
 ## Python script
 
-```
+```python
 #! /usr/bin/env python
 """
 Script for generation of input files for host to guest ITC titrations.
@@ -344,6 +344,89 @@ itc_experiment_set.writeTecanWorklist(worklist_filename)
 # Write Auto iTC-200 experiment spreadsheet.
 excel_filename = 'host-guest-itc.xlsx'
 itc_experiment_set.writeAutoITCExcel(excel_filename)
+
+```
+
+## .gwl script
+
+```
+A;Water;;Trough 100ml;2;;400.000000;;;2
+D;DestinationPlate;;ITC Plate;1;;400.000000;;;2
+W;
+A;Water;;Trough 100ml;4;;400.000000;;;8
+D;DestinationPlate;;ITC Plate;2;;400.000000;;;8
+W;
+B;
+A;Water;;Trough 100ml;2;;400.000000;;;2
+D;DestinationPlate;;ITC Plate;3;;400.000000;;;2
+W;
+A;Water;;Trough 100ml;4;;400.000000;;;8
+D;DestinationPlate;;ITC Plate;4;;400.000000;;;8
+W;
+B;
+A;Buffer;;Trough 100ml;2;;400.000000;;;2
+D;DestinationPlate;;ITC Plate;5;;400.000000;;;2
+W;
+A;Buffer;;Trough 100ml;4;;400.000000;;;8
+D;DestinationPlate;;ITC Plate;6;;400.000000;;;8
+W;
+B;
+A;Buffer;;Trough 100ml;2;;400.000000;;;2
+D;DestinationPlate;;ITC Plate;7;;400.000000;;;2
+W;
+A;SourcePlate;;5x3 Vial Holder;1;;400.000000;;;8
+D;DestinationPlate;;ITC Plate;8;;400.000000;;;8
+W;
+B;
+A;Buffer;;Trough 100ml;1;;343.877003;;;1
+D;DestinationPlate;;ITC Plate;9;;343.877003;;;1
+W;
+A;SourcePlate;;5x3 Vial Holder;2;;56.122997;;;2
+D;DestinationPlate;;ITC Plate;9;;56.122997;;;2
+W;
+A;Buffer;;Trough 100ml;4;;400.000000;;;8
+D;DestinationPlate;;ITC Plate;10;;400.000000;;;8
+W;
+B;
+A;Buffer;;Trough 100ml;1;;343.877003;;;1
+D;DestinationPlate;;ITC Plate;11;;343.877003;;;1
+W;
+A;SourcePlate;;5x3 Vial Holder;2;;56.122997;;;2
+D;DestinationPlate;;ITC Plate;11;;56.122997;;;2
+W;
+A;SourcePlate;;5x3 Vial Holder;1;;120.000000;;;8
+D;DestinationPlate;;ITC Plate;12;;120.000000;;;8
+W;
+B;
+A;Water;;Trough 100ml;2;;400.000000;;;2
+D;DestinationPlate;;ITC Plate;13;;400.000000;;;2
+W;
+A;Water;;Trough 100ml;4;;400.000000;;;8
+D;DestinationPlate;;ITC Plate;14;;400.000000;;;8
+W;
+B;
+A;Water;;Trough 100ml;2;;400.000000;;;2
+D;DestinationPlate;;ITC Plate;15;;400.000000;;;2
+W;
+A;Water;;Trough 100ml;4;;400.000000;;;8
+D;DestinationPlate;;ITC Plate;16;;400.000000;;;8
+W;
+B;
+
+```
+
+## .csv script
+
+```
+DataFile,SampleName,SamplePrepMethod,ItcMethod,AnalysisMethod,CellConcentration,PipetteConcentration,CellSource,PipetteSource,PreRinseSource,SaveSampleDestination
+20180912a1,initial cleaning water titration,Plates Clean.setup,water5inj.inj,Control,0,0,"Plate1, A1","Plate1, B1",,"Plate1, A1"
+20180912a2,water into water 1,Plates Quick.setup,ChoderaWaterWater.inj,Control,0,0,"Plate1, C1","Plate1, D1",,"Plate1, C1"
+20180912a3,buffer into buffer 1,Plates Quick.setup,ChoderaWaterWater.inj,Control,0,0,"Plate1, E1","Plate1, F1",,"Plate1, E1"
+20180912a4,host into buffer 1,Plates Quick.setup,ChoderaHostGuest.inj,Onesite,0,0,"Plate1, G1","Plate1, H1",,"Plate1, G1"
+20180912a5,buffer into guest01,Chodera Load Cell Without Cleaning Cell After.setup,ChoderaHostGuest.inj,Control,0.135228427,0,"Plate1, A2","Plate1, B2",,"Plate1, A2"
+20180912a6,host into guest01,Plates Quick.setup,ChoderaHostGuest.inj,Onesite,0.135228427,0.990536002,"Plate1, C2","Plate1, D2",,"Plate1, C2"
+20180912a7,final water into water test 1,Plates Quick.setup,ChoderaWaterWater.inj,Control,0,0,"Plate1, E2","Plate1, F2",,"Plate1, E2"
+20180912a8,final water into water test 2,Plates Quick.setup,ChoderaWaterWater.inj,Control,0,0,"Plate1, G2","Plate1, H2",,"Plate1, G2"
 
 ```
 
