--- a/180912.md
+++ b/180912.md
@@ -430,4 +430,21 @@ DataFile,SampleName,SamplePrepMethod,ItcMethod,AnalysisMethod,CellConcentration,
 
 ```
 
+## Results
+initial water cleaning
+![0](180912\20180912a1-subtracted.png)
+water-water
+![1](180912\20180912a2-subtracted.png)
+buffer-buffer
+![2](180912\20180912a3-subtracted.png)
+host-buffer
+![3](180912\20180912a4-subtracted.png)
+buffer-guest
+![4](180912\20180912a5-subtracted.png)
+host-guest
+![5](180912\20180912a6-subtracted.png)
+water-water
+![6](180912\20180912a7-subtracted.png)
+water-water
+![7](180912\20180912a8-subtracted.png)
 
