--- a/180917.md
+++ b/180917.md
@@ -1,3 +1,480 @@
 # 180917
 Yuanqing Wang, ZRC 1929
 
+## python script
+```python
+#! /usr/bin/env python
+"""
+Script for High Dynamic Range itc experiment.
+
+"""
+
+import numpy as np
+from itctools.itctools import ureg, Quantity
+from itctools.procedures import ITCProtocol, ITCExperimentSet, ITCExperiment, ITCHeuristicExperiment
+from itctools.materials import Solvent, Compound, SimpleSolution
+from itctools.labware import Labware, PipettingLocation
+
+
+
+#######################################
+# Below are the params needed to specify.
+#######################################
+
+
+# Define solvents.
+water = Solvent('water', density=0.9970479 * ureg.gram / ureg.milliliter)
+buffer = Solvent('buffer', density=1.014 * ureg.gram / ureg.milliliter)
+
+# The sample cell volume in microliters
+cell_volume = 202.8
+
+# Define compounds.
+
+# each experiment takes about 50 mins, cleaning takes 2.5
+nguests = 1
+assert(nguests==1)
+
+host = Compound('host', molecular_weight=1134.987 * ureg.gram / ureg.mole, purity=0.98)
+guest_molecular_weights = [123.11]
+
+
+# If HDR is not activated, there is only one value to guest_compound_Ka.
+# guest_compound_Ka = Quantity([np.exp(32)], ureg.liter / ureg.mole)  # see dGtoKa.py
+
+
+
+# c = [M]_0 * Ka
+# R_m = 6.4/c^0.2 + 13/c
+# Hence the scalling of c is eqivalent to the scalling of the association constant.
+
+guest_compound_Ka_guess = Quantity([np.exp(6), np.exp(8), np.exp(10), np.exp(12), np.exp(14), np.exp(16)], ureg.liter / ureg.mole)
+
+# We only allow one guest to be added into the experiment, for now.
+guests = [
+    Compound(
+        name='guest%02d' %
+        (guest_index +
+         1),
+        molecular_weight=guest_molecular_weights[guest_index] *
+        ureg.gram / ureg.mole,
+        purity=0.975) for guest_index in range(nguests)]
+
+
+
+# Define troughs on the instrument.
+
+water_trough = Labware(RackLabel='Water', RackType='Trough 100ml')
+buffer_trough = Labware(RackLabel='Buffer', RackType='Trough 100ml')
+
+# Define source labware.
+source_plate = Labware(RackLabel='SourcePlate', RackType='5x3 Vial Holder')
+
+# Define source solutions on the deck.one
+# TODO : Use actual compound and solvent masses.
+# NOTE: Host solution is diluted by 10x.
+# NOTE: it might not be a good idea to further dilute.
+#       since the host solution is already very dilute because of the low solubility.
+
+
+host_solution = SimpleSolution(
+    compound=host,
+    compound_mass=113.14 *
+    ureg.milligram,
+    solvent=buffer,
+    solvent_mass=9.8993 *
+    ureg.gram,
+    location=PipettingLocation(
+        source_plate.RackLabel,
+        source_plate.RackType,
+        1))
+
+guest_solutions = list()
+
+# Dispensed by quantos
+guest_compound_masses = Quantity([12.36],
+                                 ureg.milligram)
+# Dispensed by quantos
+guest_solvent_masses = Quantity([10.0363],
+                                ureg.gram)
+
+
+for ka_idx, ka in enumerate(list(guest_compound_Ka_guess)):
+    guest_solutions.append(
+        SimpleSolution(
+            compound=guests[0],
+            compound_mass=guest_compound_masses[0],
+            solvent=buffer,
+            solvent_mass=guest_solvent_masses[0],
+            location=PipettingLocation(
+                source_plate.RackLabel,
+                source_plate.RackType,
+                2 + ka_idx)))
+
+
+# Have one solution just to react with buffer.
+
+
+
+#######################################
+# Above are the params needed to specify.
+#######################################
+
+# Define ITC protocol.
+
+# Protocol for 'control' titrations (water-water, buffer-buffer,
+# titrations into buffer, etc.)
+control_protocol = ITCProtocol(
+    'control_protocol',
+    sample_prep_method='Plates Quick.setup',
+    itc_method='ChoderaWaterWater.inj',
+    analysis_method='Control',
+    experimental_conditions=dict(target_temperature=25, equilibration_time=60, stir_rate=1000, reference_power=5),
+    injections=[dict(volume_inj=0.2, duration_inj=0.4, spacing=60, filter_period=0.5)] +
+        10 * [dict(volume_inj=3.0, duration_inj=6, spacing=120, filter_period=0.5)],
+    )
+
+# Protocol for 1:1 binding analyis
+blank_protocol = ITCProtocol(
+    '1:1 binding protocol',
+    sample_prep_method='Plates Quick.setup',
+    itc_method='ChoderaHostGuest.inj',
+    analysis_method='Control',
+    experimental_conditions=dict(target_temperature=25, equilibration_time=300, stir_rate=1000, reference_power=5),
+    injections=[dict(volume_inj=0.2, duration_inj=0.4, spacing=60, filter_period=0.5)] +
+        10 * [dict(volume_inj=3.0, duration_inj=6, spacing=120, filter_period=0.5)],
+    )
+binding_protocol = ITCProtocol(
+    '1:1 binding protocol',
+    sample_prep_method='Plates Quick.setup',
+    itc_method='ChoderaHostGuest.inj',
+    analysis_method='Onesite',
+    experimental_conditions=dict(target_temperature=25, equilibration_time=300, stir_rate=1000, reference_power=5),
+    injections=[dict(volume_inj=0.2, duration_inj=0.4, spacing=60, filter_period=0.5)] +
+        10 * [dict(volume_inj=3.0, duration_inj=6, spacing=120, filter_period=0.5)],
+    )
+# Protocol for cleaning protocol
+cleaning_protocol = ITCProtocol(
+    'cleaning protocol',
+    sample_prep_method='Plates Clean.setup',
+    itc_method='water5inj.inj',
+    analysis_method='Control',
+    experimental_conditions=dict(target_temperature=25, equilibration_time=60, stir_rate=1000, reference_power=5),
+    injections=5 * [dict(volume_inj=7.5, duration_inj=15, spacing=150, filter_period=5)],
+    )
+
+
+# Define ITC Experiment.
+
+# use specified protocol by default
+itc_experiment_set = ITCExperimentSet(name='hdr_experiments', hdr = True)
+# Add available plates for experiments.
+itc_experiment_set.addDestinationPlate(
+    Labware(
+        RackLabel='DestinationPlate',
+        RackType='ITC Plate'))
+itc_experiment_set.addDestinationPlate(
+    Labware(
+        RackLabel='DestinationPlate2',
+        RackType='ITC Plate'))
+
+nreplicates = 1  # number of replicates of each experiment
+
+# Add cleaning experiment.
+name = 'initial cleaning water titration'
+itc_experiment_set.addExperiment(
+    ITCExperiment(
+        name=name,
+        syringe_source=water_trough,
+        cell_source=water_trough,
+        protocol=cleaning_protocol,
+        cell_volume=cell_volume,))
+
+# Add water control titrations.
+for replicate in range(1):
+    name = 'water into water %d' % (replicate + 1)
+    itc_experiment_set.addExperiment(
+        ITCExperiment(
+            name=name,
+            syringe_source=water_trough,
+            cell_source=water_trough,
+            protocol=control_protocol,
+            cell_volume=cell_volume,))
+
+# Add buffer control titrations.
+for replicate in range(1):
+    name = 'buffer into buffer %d' % (replicate + 1)
+    itc_experiment_set.addExperiment(
+        ITCExperiment(
+            name=name,
+            syringe_source=buffer_trough,
+            cell_source=buffer_trough,
+            protocol=control_protocol,
+            cell_volume=cell_volume,))
+
+# Host into buffer.
+for replicate in range(1):
+    name = 'host into buffer %d' % (replicate + 1)
+    itc_experiment_set.addExperiment(
+        ITCExperiment(
+            name=name,
+            syringe_source=host_solution,
+            cell_source=buffer_trough,
+            protocol=binding_protocol,
+            cell_volume=cell_volume,))
+
+# Host/guests.
+# scale cell concentration to fix necessary syringe concentrations
+cell_scaling = 1.
+cell_concentration = 0.3 * ureg.millimole / ureg.liter * cell_scaling
+optimal_rm = list()
+
+for kda_idx, kda in enumerate(list(guest_compound_Ka_guess)):
+
+    # We need to store the experiments before adding them to the set
+    host_guest_experiments = list()
+    buff_guest_experiments = list()
+
+    # Scaling factors per replicate
+    factors = list()
+    # Define host into guest experiments.
+    for replicate in range(1):
+        name = 'host into guest %s' % kda_idx
+        experiment = ITCHeuristicExperiment(
+            name=name,
+            syringe_source=host_solution,
+            cell_source=guest_solutions[kda_idx],
+            protocol=binding_protocol,
+            cell_volume=cell_volume,
+            cell_concentration=cell_concentration,
+            buffer_source=buffer_trough)
+        # optimize the syringe_concentration using heuristic equations and known binding constants
+        optimal_rm.append(experiment.heuristic_syringe(
+            guest_compound_Ka_guess[kda_idx],
+            strict=False))
+        # rescale if syringe > stock. Store factor.
+        factors.append(experiment.rescale())
+        host_guest_experiments.append(experiment)
+    # Add host to guest experiment(s) to set
+    for host_guest_experiment in host_guest_experiments:
+        itc_experiment_set.addExperiment(host_guest_experiment)
+        host_guest_experiment.simulate(guest_compound_Ka_guess[kda_idx], macromol_titrant=True,
+                        filename='simulation.png')
+
+
+
+# Define buffer into guest experiments.
+for replicate in range(1):
+    name = 'buffer into guest'
+    experiment = ITCHeuristicExperiment(
+        name=name,
+        syringe_source=buffer_trough,
+        cell_source=guest_solutions[-1],
+        protocol=blank_protocol,
+        cell_volume=cell_volume,
+        cell_concentration=cell_concentration,
+        buffer_source=buffer_trough)
+    # rescale to match host into guest experiment concentrations.
+    experiment.rescale(tfactor=factors[replicate])
+    buff_guest_experiments.append(experiment)
+
+# Add buffer to guest experiment(s) to set
+for buff_guest_experiment in buff_guest_experiments:
+    itc_experiment_set.addExperiment(buff_guest_experiment)
+
+
+# Add cleaning experiment.
+#name = 'final cleaning water titration'
+#itc_experiment_set.addExperiment( ITCExperiment(name=name, syringe_source=water_trough, cell_source=water_trough, protocol=cleaning_protocol) )
+
+# Water control titrations.
+nfinal = 2
+for replicate in range(nfinal):
+    name = 'final water into water test %d' % (replicate + 1)
+    itc_experiment_set.addExperiment(
+        ITCExperiment(
+            name=name,
+            syringe_source=water_trough,
+            cell_source=water_trough,
+            protocol=control_protocol,
+            cell_volume=cell_volume,))
+
+# Check that the experiment can be carried out using available solutions
+# and plates.
+
+itc_experiment_set.validate(print_volumes=True, omit_zeroes=True)
+
+# Get effective Rm
+actual_Rm = list()
+for experiment in itc_experiment_set.experiments:
+    try:
+        guest_mol = ((experiment.cell_concentration * 202.8 * Quantity('microliter')).to('millimole'))
+        host_mol = ((experiment.syringe_concentration * 30 * Quantity('microliter')).to('millimole'))
+        Rm = host_mol/guest_mol
+        actual_Rm.append(Rm)
+
+    except (AttributeError, TypeError):
+        continue
+
+with open("host-guest-itc-Rm.txt", 'w') as ratio_file:
+    ratio_file.write("#, Optimal, Actual\n")
+    for idx,(opt,act) in enumerate(zip(optimal_rm, actual_Rm), start=1):
+        ratio_file.write("%d, %.5f, %.5f\n" % (idx, opt, act))
+
+
+# Write Tecan EVO pipetting operations.
+worklist_filename = 'host-guest-itc.gwl'
+itc_experiment_set.writeTecanWorklist(worklist_filename)
+
+# Write Auto iTC-200 experiment spreadsheet.
+excel_filename = 'host-guest-itc.csv'
+itc_experiment_set.writeAutoITCCSV(excel_filename)
+
+```
+
+## .gwl script
+
+```
+A;Water;;Trough 100ml;2;;400.000000;;;2
+D;DestinationPlate;;ITC Plate;1;;400.000000;;;2
+W;
+A;Water;;Trough 100ml;4;;400.000000;;;8
+D;DestinationPlate;;ITC Plate;2;;400.000000;;;8
+W;
+B;
+A;Water;;Trough 100ml;2;;400.000000;;;2
+D;DestinationPlate;;ITC Plate;3;;400.000000;;;2
+W;
+A;Water;;Trough 100ml;4;;400.000000;;;8
+D;DestinationPlate;;ITC Plate;4;;400.000000;;;8
+W;
+B;
+A;Buffer;;Trough 100ml;2;;400.000000;;;2
+D;DestinationPlate;;ITC Plate;5;;400.000000;;;2
+W;
+A;Buffer;;Trough 100ml;4;;400.000000;;;8
+D;DestinationPlate;;ITC Plate;6;;400.000000;;;8
+W;
+B;
+A;Buffer;;Trough 100ml;2;;400.000000;;;2
+D;DestinationPlate;;ITC Plate;7;;400.000000;;;2
+W;
+A;SourcePlate;;5x3 Vial Holder;1;;400.000000;;;8
+D;DestinationPlate;;ITC Plate;8;;400.000000;;;8
+W;
+B;
+A;Buffer;;Trough 100ml;1;;399.481317;;;1
+D;DestinationPlate;;ITC Plate;9;;399.481317;;;1
+W;
+A;SourcePlate;;5x3 Vial Holder;2;;0.518683;;;2
+D;DestinationPlate;;ITC Plate;9;;0.518683;;;2
+W;
+A;SourcePlate;;5x3 Vial Holder;1;;120.000000;;;8
+D;DestinationPlate;;ITC Plate;10;;120.000000;;;8
+W;
+B;
+A;Buffer;;Trough 100ml;1;;397.117011;;;1
+D;DestinationPlate;;ITC Plate;11;;397.117011;;;1
+W;
+A;SourcePlate;;5x3 Vial Holder;2;;2.882989;;;2
+D;DestinationPlate;;ITC Plate;11;;2.882989;;;2
+W;
+A;SourcePlate;;5x3 Vial Holder;1;;120.000000;;;8
+D;DestinationPlate;;ITC Plate;12;;120.000000;;;8
+W;
+B;
+A;Buffer;;Trough 100ml;1;;390.435286;;;1
+D;DestinationPlate;;ITC Plate;13;;390.435286;;;1
+W;
+A;SourcePlate;;5x3 Vial Holder;2;;9.564714;;;2
+D;DestinationPlate;;ITC Plate;13;;9.564714;;;2
+W;
+A;SourcePlate;;5x3 Vial Holder;1;;120.000000;;;8
+D;DestinationPlate;;ITC Plate;14;;120.000000;;;8
+W;
+B;
+A;Buffer;;Trough 100ml;1;;387.866470;;;1
+D;DestinationPlate;;ITC Plate;15;;387.866470;;;1
+W;
+A;SourcePlate;;5x3 Vial Holder;2;;12.133530;;;2
+D;DestinationPlate;;ITC Plate;15;;12.133530;;;2
+W;
+A;Buffer;;Trough 100ml;3;;43.172319;;;4
+D;DestinationPlate;;ITC Plate;16;;43.172319;;;4
+W;
+A;SourcePlate;;5x3 Vial Holder;1;;76.827681;;;8
+D;DestinationPlate;;ITC Plate;16;;76.827681;;;8
+W;
+B;
+A;Buffer;;Trough 100ml;1;;387.866470;;;1
+D;DestinationPlate;;ITC Plate;17;;387.866470;;;1
+W;
+A;SourcePlate;;5x3 Vial Holder;2;;12.133530;;;2
+D;DestinationPlate;;ITC Plate;17;;12.133530;;;2
+W;
+A;Buffer;;Trough 100ml;3;;71.913242;;;4
+D;DestinationPlate;;ITC Plate;18;;71.913242;;;4
+W;
+A;SourcePlate;;5x3 Vial Holder;1;;48.086758;;;8
+D;DestinationPlate;;ITC Plate;18;;48.086758;;;8
+W;
+B;
+A;Buffer;;Trough 100ml;1;;387.866470;;;1
+D;DestinationPlate;;ITC Plate;19;;387.866470;;;1
+W;
+A;SourcePlate;;5x3 Vial Holder;2;;12.133530;;;2
+D;DestinationPlate;;ITC Plate;19;;12.133530;;;2
+W;
+A;Buffer;;Trough 100ml;3;;88.228297;;;4
+D;DestinationPlate;;ITC Plate;20;;88.228297;;;4
+W;
+A;SourcePlate;;5x3 Vial Holder;1;;31.771703;;;8
+D;DestinationPlate;;ITC Plate;20;;31.771703;;;8
+W;
+B;
+A;Buffer;;Trough 100ml;1;;387.866470;;;1
+D;DestinationPlate;;ITC Plate;21;;387.866470;;;1
+W;
+A;SourcePlate;;5x3 Vial Holder;2;;12.133530;;;2
+D;DestinationPlate;;ITC Plate;21;;12.133530;;;2
+W;
+A;Buffer;;Trough 100ml;4;;400.000000;;;8
+D;DestinationPlate;;ITC Plate;22;;400.000000;;;8
+W;
+B;
+A;Water;;Trough 100ml;2;;400.000000;;;2
+D;DestinationPlate;;ITC Plate;23;;400.000000;;;2
+W;
+A;Water;;Trough 100ml;4;;400.000000;;;8
+D;DestinationPlate;;ITC Plate;24;;400.000000;;;8
+W;
+B;
+A;Water;;Trough 100ml;2;;400.000000;;;2
+D;DestinationPlate;;ITC Plate;25;;400.000000;;;2
+W;
+A;Water;;Trough 100ml;4;;400.000000;;;8
+D;DestinationPlate;;ITC Plate;26;;400.000000;;;8
+W;
+B;
+
+```
+
+## .csv file
+
+```csv
+DataFile,SampleName,SamplePrepMethod,ItcMethod,AnalysisMethod,CellConcentration,PipetteConcentration,CellSource,PipetteSource,PreRinseSource,SaveSampleDestination
+20180917a1,initial cleaning water titration,Plates Clean.setup,water5inj.inj,Control,0,0,"Plate1, A1","Plate1, B1",,"Plate1, A1"
+20180917a2,water into water 1,Plates Quick.setup,ChoderaWaterWater.inj,Control,0,0,"Plate1, C1","Plate1, D1",,"Plate1, C1"
+20180917a3,buffer into buffer 1,Plates Quick.setup,ChoderaWaterWater.inj,Control,0,0,"Plate1, E1","Plate1, F1",,"Plate1, E1"
+20180917a4,host into buffer 1,Plates Quick.setup,ChoderaHostGuest.inj,Onesite,0,0,"Plate1, G1","Plate1, H1",,"Plate1, G1"
+20180917a5,host into guest 0,Plates Quick.setup,ChoderaHostGuest.inj,Onesite,0.012824383468253346,10.00656065195872,"Plate1, A2","Plate1, B2",,"Plate1, A2"
+20180917a6,host into guest 1,Plates Quick.setup,ChoderaHostGuest.inj,Onesite,0.07128154849167169,10.00656065195872,"Plate1, C2","Plate1, D2",,"Plate1, C2"
+20180917a7,host into guest 2,Plates Quick.setup,ChoderaHostGuest.inj,Onesite,0.23648634404252017,10.00656065195872,"Plate1, E2","Plate1, F2",,"Plate1, E2"
+20180917a8,host into guest 3,Plates Quick.setup,ChoderaHostGuest.inj,Onesite,0.3,6.406507072198223,"Plate1, G2","Plate1, H2",,"Plate1, G2"
+20180917a9,host into guest 4,Plates Quick.setup,ChoderaHostGuest.inj,Onesite,0.3,4.0098588208031485,"Plate1, A3","Plate1, B3",,"Plate1, A3"
+20180917a10,host into guest 5,Plates Quick.setup,ChoderaHostGuest.inj,Onesite,0.3,2.649378919285435,"Plate1, C3","Plate1, D3",,"Plate1, C3"
+20180917a11,buffer into guest,Plates Quick.setup,ChoderaHostGuest.inj,Control,0.3,0,"Plate1, E3","Plate1, F3",,"Plate1, E3"
+20180917a12,final water into water test 1,Plates Quick.setup,ChoderaWaterWater.inj,Control,0,0,"Plate1, G3","Plate1, H3",,"Plate1, G3"
+20180917a13,final water into water test 2,Plates Quick.setup,ChoderaWaterWater.inj,Control,0,0,"Plate1, A4","Plate1, B4",,"Plate1, A4"
+
+```
