--- a/180917.md
+++ b/180917.md
@@ -460,7 +460,7 @@ B;
 ```
 
 ## .csv file
-![0](180917/host-guest-itc.csv)
+[0](180917/host-guest-itc.csv)
 ```csv
 DataFile,SampleName,SamplePrepMethod,ItcMethod,AnalysisMethod,CellConcentration,PipetteConcentration,CellSource,PipetteSource,PreRinseSource,SaveSampleDestination
 20180917a1,initial cleaning water titration,Plates Clean.setup,water5inj.inj,Control,0,0,"Plate1, A1","Plate1, B1",,"Plate1, A1"
