--- a/180917.md
+++ b/180917.md
@@ -1,6 +1,12 @@
 # 180917
 Yuanqing Wang, ZRC 1929
 
+- used 10 mM niacin and 10mM beta-cd
+- high dynamic range
+
+TODO:
+- use a better protocal to do high dynamic range experiment
+
 ## python script
 ```python
 #! /usr/bin/env python
