--- a/180917.md
+++ b/180917.md
@@ -484,3 +484,17 @@ DataFile,SampleName,SamplePrepMethod,ItcMethod,AnalysisMethod,CellConcentration,
 20180917a13,final water into water test 2,Plates Quick.setup,ChoderaWaterWater.inj,Control,0,0,"Plate1, A4","Plate1, B4",,"Plate1, A4"
 
 ```
+
+![0](180917/20180917a1-subtracted.png)
+![0](180917/20180917a2-subtracted.png)
+![0](180917/20180917a3-subtracted.png)
+![0](180917/20180917a4-subtracted.png)
+![0](180917/20180917a5-subtracted.png)
+![0](180917/20180917a6-subtracted.png)
+![0](180917/20180917a7-subtracted.png)
+![0](180917/20180917a8-subtracted.png)
+![0](180917/20180917a9-subtracted.png)
+![0](180917/20180917a10-subtracted.png)
+![0](180917/20180917a11-subtracted.png)
+![0](180917/20180917a12-subtracted.png)
+
